--- a/help.html
+++ b/help.html
@@ -5,7 +5,7 @@
 	<title>API xem thời khóa biểu UIT</title>
 </head>
 <body>
-Gọi HTTP POST tới địa chỉ: https://uit-schedule.herokuapp.com/api/getSchedule với cấu trúc như sau: <br/>
+Gọi HTTP POST tới địa chỉ: https://uit-schedule.herokuapp.com/api/time-table với cấu trúc như sau: <br/>
 - <strong>Request Headers: </strong><br/>
 Content-Type: application/json <br/>
 - <strong>Request Body: </strong><br/>
